--- a/PLEASE/yes.html
+++ b/PLEASE/yes.html
@@ -18,7 +18,7 @@
             in some ways but yea... this is my confession :D, I actually don't have any <br> plan on confessing pero nung nalaman ko
             na malilipat ka ng section due <br> to your strand being ABM I gathered up the courage to confess and here I am, <br>
             Confessing to a girl who doesn't have any idea who I am. yun lang HAHAAH <br> sana makita mo yung message PEACEE.  </p>
-            <audio id="sound" controls autoplay src="Kinikilig.mp3"></audio>
+            <audio id="sound" controls autoplay hidden src="Kinikilig.mp3"></audio>
             <img src="crykilig.jpeg" alt="">
             </div>
 
