--- a/PLEASE/yes.html
+++ b/PLEASE/yes.html
@@ -16,8 +16,9 @@
             <p class="ay">AYIEE slide through my dms plssss <3</p>
             <p class="ay">JK I hope you wouldn't take this too seriously or won't get offended by it<br>
             in some ways but yea... this is my confession :D, I actually don't have any <br> plan on confessing pero nung nalaman ko
-            na malilipat ka ng section due <br> to your strand being ABM I gathered up the courage to confess and here I am, <br>
-            Confessing to a girl who doesn't have any idea who I am. yun lang HAHAAH <br> sana makita mo yung message PEACEE.  </p>
+            na malilipat ka ng section due <br> to your strand being ABM I gathered up the courage to confess and here <br> I am, 
+            confessing to a girl who doesn't have the slightest idea of who I am. <br> sana napasaya ko den araw mo kahit unti lang HAHAHAHA
+            <br>  NGL feel ko ang weird din nito kasi di pa naman tayo nag uusap kahit <br> once, yun lang sana makita mo yung message PEACEE.  </p>
             <audio id="sound" controls autoplay hidden src="kinikilig.mp3"></audio>
             <img src="crykilig.jpeg" alt="">
             </div>
