--- a/HI/yes.html
+++ b/HI/yes.html
@@ -15,7 +15,7 @@
             <img src="packilig.jpeg" alt="">
             <p class="ay">AYIEE slide through my dms plssss <3</p>
             <p class="ay"> </p>
-            <audio id="sound" controls autoplay src="kinikilig.mp3"></audio>
+            <audio id="sound" controls autoplay hidden src="kinikilig.mp3"></audio>
             <img src="crykilig.jpeg" alt="">
             </div>
 
